# leak_slice

./: Cargo.toml  README.md
src/: lib.rs
tests/: leak.rs
