[package]
name = "leak_slice"
version = "0.1.0"
edition = "2021"

authors = ["uselessgoddess <dodickgod@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uselessgoddess/leak_slice"
homepage = "https://github.com/uselessgoddess/leak_slice"
description = """
leak &mut [T] in favor of NonNull<[T]>
"""
categories = ["memory-management"]
keywords = [ "leak", "slice" ]
